# wepld

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DECISIONS.md  LICENSE  M0_RELEASE_REPORT.md  NOTICE  README.md
.github/workflows/: ci.yml  docs-validation.yml  s0-5a-desktop-security.yml
crates/artifacts/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: demo.rs  main.rs  recipe_demo.rs  spec_demo.rs
crates/contracts/: Cargo.toml
crates/hermes/: Cargo.toml
crates/hermes/src/: main.rs
crates/hermes/tests/: adversarial_tests.rs  brain_tests.rs  build_tests.rs  golden_tests.rs  governance_tests.rs  integrity_tests.rs  lifecycle_tests.rs  orchestration_tests.rs  recipe_golden_tests.rs  spec_golden_tests.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: error.rs  fold.rs  lib.rs  store.rs
crates/ledger/tests/: ledger_tests.rs
crates/providers/: Cargo.toml
crates/providers/src/: fixture.rs  lib.rs  openai.rs  record.rs  schema.rs
crates/providers/tests/: gateway_tests.rs  openai_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: commands.rs  gates.rs  lib.rs  memory.rs  orchestration.rs  phase.rs  recipe.rs  report.rs  spec.rs
crates/runtime/tests/: runtime_tests.rs
crates/specification/: Cargo.toml
crates/specification/src/: convert.rs  lib.rs  parse.rs  quality.rs  render.rs  templates.rs  validate.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
crates/workspace/tests/: workspace_tests.rs
crates/wwp/: Cargo.toml
crates/wwp/src/: frame.rs  host.rs  lib.rs  worker.rs
docs/: 01_Project_Vision.md  02_Product_Principles.md  03_System_Architecture.md  04_Component_Architecture.md  05_Worker_Architecture.md  06_Brain_Architecture.md  07_Messenger_Agent.md  08_Knowledge_System.md  09_Skills_System.md  10_Loop_Engineering.md  11_UI_UX_Architecture.md  12_Workspaces.md  13_Mission_Control.md  14_Security_Architecture.md  15_Plugin_System.md  16_Data_Model.md  17_Event_System.md  18_API_Architecture.md  19_Implementation_Roadmap.md  20_Risk_Assessment.md  21_Project_Backlog.md  22_Milestones.md  23_Technology_Evaluation.md  24_Repository_Structure.md  25_Development_Guidelines.md  26_Testing_Strategy.md  27_Performance_Goals.md  28_Release_Strategy.md  29_Future_Vision.md  30_ARCHITECTURE_SUMMARY.md  31_Governed_Specification_Workflow.md  32_Hermes_Engineering_Intelligence_Runtime.md  33_Model_Independent_Outcome_Convergence.md  34_Harness_Evaluation_Protocol.md  35_Reference_Systems_and_Competitive_Architecture.md  36_Engineering_Committee.md  37_Committee_Evaluation_Protocol.md
docs/adr/: ADR-0001-architecture-v2-baseline.md  ADR-0002-single-worker-runtime-role-switching.md  ADR-0003-audit-ledger-not-full-event-sourcing.md  ADR-0004-envelope-enforcement.md  ADR-0005-hermes-as-reference-runtime.md  ADR-0006-context-assembly-subsystem.md  ADR-0007-sandbox-tier-model.md  ADR-0008-mvp-one-governed-mission.md  ADR-0009-two-autonomy-modes.md  ADR-0010-solo-professional-wedge.md  ADR-0011-replay-as-projection.md  ADR-0012-branching-as-fork-never-rewind.md  ADR-0013-workspace-snapshot-refs.md  ADR-0014-causal-index-and-rca.md  ADR-0015-governed-specification-contract.md  ADR-0016-brain-plan-builder-execution-separation.md  ADR-0017-phase-kanban-controlled-change.md  ADR-0018-hermes-skill-runtime-hook-bus.md  ADR-0019-context-compiler-lsp-hybrid-retrieval.md  ADR-0020-typed-memory-memory-judge.md  ADR-0021-bounded-subagents-structured-handoffs.md  ADR-0022-controlled-loop-escalation.md  ADR-0023-model-independent-outcome-equivalence.md  ADR-0024-evaluation-spine-run-provenance.md  ADR-0024-harness-evaluation-provider-certification.md  ADR-0025-model-profile-certification.md  ADR-0026-engineering-committee.md  README.md
docs/architecture/: DESKTOP_ARCHITECTURE.md  README.md  TECHNOLOGY_CONSTITUTION.md
docs/diagrams/: wepld-architecture.html
docs/governance/: AI_ASSISTED_DEVELOPMENT.md  CONFIDENTIALITY.md  DEPENDENCY_REGISTER.md  INTELLECTUAL_PROPERTY.md  INVENTION_LOG.md  LICENSING.md  README.md  REPOSITORY_ACCESS_CONTROL.md  THIRD_PARTY_DEPENDENCIES.md
docs/impl/: 00_Implementation_Program.md  01_Repository_Layout.md  02_Interfaces_and_Boundaries.md  03_Milestones_and_Timeline.md  04_Sprint_1.md  05_Package_Specs.md  06_Testing_Strategy.md  07_Risk_Register.md  08_Solo_Founder_Guide.md  09_Engineering_Memory_Contract.md  10_V0_Governance_Safety_and_Limits.md  M1_SPEC_KIT_INTEGRATION.md
docs/security/: CAPABILITY_MODEL.md  README.md  SAFE_RUST_STANDARD.md  SECURITY_CONSTITUTION.md  THREAT_MODEL.md  TRUSTED_COMPUTING_BASE.md
docs/strategy/: README.md  WEPLD_Evaluation_and_Research_Programme.md  WEPLD_Open_Core_and_Commercial_Model.md  WEPLD_Product_Architecture_Map.md  WEPLD_Staged_Delivery_Roadmap.md  WEPLD_Strategic_Capability_Portfolio.md  WEPLD_Studio_and_User_Experience.md  WEPLD_Tooling_and_Integration_Map.md
docs/v2/: 00_Architecture_V2_Overview.md  01_MVP_One_Governed_Mission.md  02_System_Design_Mechanisms.md  03_Worker_Runtime_and_Hermes.md  04_Context_Assembly.md  05_Sandbox_Strategy.md  06_State_and_Ledger.md  07_Contracts.md  08_Worked_Example.md  09_Roadmap_and_Sizing.md  10_Decision_Economics_and_Messenger.md  11_Chronicle_Overview.md  12_Replay_Engine.md  13_Engineering_Cinema.md  14_Engineering_Forensics.md  15_Mission_Branching.md  16_Engineering_Intelligence.md  17_Chronicle_Contracts_and_API.md  18_Chronicle_Worked_Examples.md
experiments/s0-5a-desktop-security/: .gitignore  Cargo.toml  DEPENDENCY_EVIDENCE.md  EVIDENCE.md  LIMITATIONS.md  MANUAL_RUNTIME_EVIDENCE.md  (+3 more)
experiments/s0-5a-desktop-security/app/tauri-host/: Cargo.toml  build.rs  tauri.conf.json
experiments/s0-5a-desktop-security/app/tauri-host/capabilities/: default.json
experiments/s0-5a-desktop-security/app/tauri-host/icons/: icon.icns
experiments/s0-5a-desktop-security/app/tauri-host/src/: main.rs
experiments/s0-5a-desktop-security/core/: Cargo.toml
experiments/s0-5a-desktop-security/core/src/: lib.rs  main.rs
experiments/s0-5a-desktop-security/core/tests/: security.rs
scripts/: validate_architecture_docs.py
(+81 files in other folders)
