[workspace]
resolver = "2"
members = ["crates/contracts", "crates/ledger", "crates/runtime", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
