[package]
name = "wepld-ledger"
description = "WePLD SQLite store: state tables + hash-chained append-only ledger + fold reducer (ADR-0003, v2-06)"
version.workspace = true
edition.workspace = true

[dependencies]
wepld-contracts = { path = "../contracts" }
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.11.0"
ulid = "2.0.1"
thiserror = "2.0.18"
chrono = "0.4.45"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
