[package]
name = "s05a-tauri-host"
version = "0.0.1"
edition = "2021"
publish = false
description = "EXPERIMENTAL — NEVER MERGE. Minimal Tauri 2 host bridge for S0.5A."

# Standalone crate with its own lockfile: NOT part of the core workspace.
[[bin]]
name = "s05a-tauri-host"
path = "src/main.rs"

[build-dependencies]
# tauri-build runs at build time (a build script). Recorded as a
# supply-chain execution surface in DEPENDENCY_EVIDENCE.md.
tauri-build = { version = "2", features = [] }

[dependencies]
# The host bridge reuses the prototype protocol crate for framed-stdio
# IPC with the separate core. No serde in the host itself.
s05a-protocol = { path = "../../protocol" }
tauri = { version = "2", features = [] }

[features]
# Tauri custom-protocol feature is enabled for release bundles.
custom-protocol = ["tauri/custom-protocol"]
